src/objects/Dialing_Codes__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Country Code , Dialing Code Mapping</description>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dialing_Code__c</fullName>
        <label>Dialing Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UI_Picklist_Value__c</fullName>
        <label>UI Picklist Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Dialing Codes</label>
</CustomObject>